# aski-core

./: CLAUDE.md  Cargo.toml  flake.nix
bootstrap/: kernel.rs
core/: dialect.aski  dialect.core  name.aski  node.aski  scope.aski  span.aski  tree.aski
source/: kernel.aski
src/: lib.rs  main.rs
