[package]
name = "synth-core"
version = "0.17.0"
edition = "2021"
authors = ["Li Goldragon <li@goldragon.criome.net>"]
description = "synth-core — rkyv contract types for askicc↔askic (grammar types)"

[lib]
name = "synth_core"
path = "src/lib.rs"

[dependencies]
rkyv = { version = "0.8", default-features = false, features = [
    "little_endian",
    "alloc",
] }
